--- a/src/components/filter.css
+++ b/src/components/filter.css
@@ -74,8 +74,31 @@
     padding: 8px 16px 8px 16px;
     gap: 8px;
     border: 1px solid #D9D9D9;
-    opacity: 0px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    text-align: left;
 }
+
+.select-setting option {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    text-align: left; 
+}
+
+  .select-setting option:hover {
+    background-color: white /* Цвет фона при наведении */
+  }
+/* .select-setting {
+    width: 250px;
+    padding: 8px;
+    font-size: 16px;
+    border: 1px solid #ccc; 
+    border-radius: 4px;
+    background-color: #fff; 
+    color: #333; 
+  } */
 
 .filter-3{
     display: flex;
@@ -147,7 +170,3 @@
   background-color: #007bff;
   color: #fff;
 }
-
-.select-setting option {
-    font-size: 16px;
-  }
