--- a/src/components/filter.css
+++ b/src/components/filter.css
@@ -11,7 +11,7 @@
     margin: 24px 24px 0px 24px;
 }
 
-.biba{
+.text-information{
     margin: 0px 24px 24px 24px;
     margin-top: 24px;
     width: 369px;
@@ -21,6 +21,10 @@
     font-weight: 400;
     line-height: 18px;
     text-align: left;
+}
+
+.text-margin{
+    margin-bottom: 12px;
 }
 
 .img-setting{
